--- a/portfolio.css
+++ b/portfolio.css
@@ -295,24 +295,24 @@ a.site-logo {
 
 .hero-text-2{
   /* border: 2px solid rgb(170, 255, 0); */
-    font-size: 3rem;
-  height: 15%;
+    font-size: 3.5rem;
+  height: 20%;
     font-family: 'Rowdies', cursive;
     margin: 0;
     text-align: start;
 }
 
 .hero-text-3{
-  /* border: 2px solid rgb(251, 255, 0); */
+  border: 2px solid rgb(251, 255, 0);
   height: 15%;  
-  font-size: 2rem;
+  font-size: 1.8rem;
     font-family: 'Rowdies', cursive;
     margin: 0;
-    letter-spacing: 2px;
+    letter-spacing: 5px;
 }
 
 .hero-paragraph{
-  /* border: 2px solid rgb(255, 0, 247); */
+  border: 2px solid rgb(255, 0, 247);
   width: 90%;
   height: 23%;
   margin: 0;
@@ -323,12 +323,11 @@ a.site-logo {
 .social-buttons{
   margin-top: 10px;
   height: 15%;
-  /* border: 2px solid rgb(94, 255, 0); */
-  width: 40%;
+  border: 2px solid rgb(94, 255, 0);
+  width: 33%;
 }
 
 .icons{
-  margin-top: 8px;
   margin-top: 5px;
   width: 40px;
   height: 40px;
@@ -402,6 +401,12 @@ hr{
   width: 100%;
 }
 
+.social-buttons{
+  margin-top: 10px;
+  height: 15%;
+  width: 40%;
+}
+
 .icons{
   margin-top: -10px;
   padding-left: 5px;
@@ -444,12 +449,12 @@ button{
  }
 
 .hero-text-2{
-    font-size:3rem;
+    font-size:3.5rem;
 }
 
 .hero-text-3{
-    font-size:1.5rem;
-    letter-spacing: 5px;
+    font-size: 2rem;
+    letter-spacing: 8px;
 }
 
 .hero-paragraph{
