--- a/portfolio.css
+++ b/portfolio.css
@@ -409,8 +409,8 @@ hr{
 }
 
 .icons{
-  width: 35px;
-  height: 35px;
+  width: 40px;
+  height: 40px;
   padding-left: 10px;
 
 }
@@ -467,6 +467,11 @@ button{
   margin-top: 5px;
 }
 
+.hero-paragraph{
+  border: 2px solid red;
+  width: 100%;
+}
+
 .social-buttons{
   margin-top: 10px;
   height: 15%;
@@ -483,6 +488,7 @@ button{
 
 button{
   width: 40%;
+  margin-top: -10px;
 }
 } 
 
